--- a/app.json
+++ b/app.json
@@ -14,14 +14,15 @@
     "scheme": "aora",
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "package": "com.kwl.aora"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.jsm.sora"
+      "package": "com.kwl.aora"
     },
     "web": {
       "favicon": "./assets/favicon.png"
