--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.14",
-    "expo-constants": "~15.4.6",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.10",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.2",
+    "expo-av": "^14.0.4",
+    "expo-constants": "~16.0.1",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.11",
+    "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
+    "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.3.0",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
