crash course doen

--- a/app.json
+++ b/app.json
@@ -27,6 +27,6 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-router", "expo-font"]
+    "plugins": [ "expo-document-picker", "expo-router", "expo-font"]
   }
 }
