--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo": "^51.0.2",
     "expo-av": "^14.0.4",
     "expo-constants": "~16.0.1",
+    "expo-document-picker": "^12.0.1",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.11",
     "expo-status-bar": "~1.12.1",
@@ -22,7 +23,8 @@
     "react-native-appwrite": "^0.3.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-url-polyfill": "^2.0.0"
+    "react-native-url-polyfill": "^2.0.0",
+    "expo-image-picker": "~15.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
